--- a/src/week4_assignment3/prometheus.yml
+++ b/src/week4_assignment3/prometheus.yml
@@ -21,3 +21,14 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['localhost:8761']
+
+
+# Run using
+# ./prometheus --config.file=path/to/prometheus.yml
+
+# Start grafana using
+# bin/grafana-server
+
+# Paste this onto prometheus and execute 
+# http_server_requests_seconds_count
+
